# Fileforge

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  DOCLING_SETUP.md  Dockerfile.converter-api  Dockerfile.worker  Makefile  Procfile.dev  README.md  WINDOWS_SETUP.md  alembic.ini  docker-compose.yml  pyproject.prod.toml  pyproject.toml  railway.json  railway.worker.json  ruff.toml  start-dev.ps1
.claude/: settings.local.json
apps/converter_api/: dependencies.py  main.py  railway.json
apps/converter_api/api/v1/: api_keys.py  auth.py  convert.py  documents.py  public.py  router.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/api-keys/: page.tsx
apps/frontend/src/app/api-keys/docs/: page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/documents/: page.tsx
apps/frontend/src/app/documents/[id]/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/settings/: page.tsx
apps/frontend/src/app/signup/: page.tsx
apps/frontend/src/app/transform/: layout.tsx  page.tsx
apps/frontend/src/app/upload/: page.tsx
apps/frontend/src/app/verify-email/: page.tsx
apps/frontend/src/app/verify-otp/: page.tsx
apps/frontend/src/components/: providers.tsx
apps/frontend/src/components/auth/: protected-route.tsx
apps/frontend/src/components/documents/: chunk-viewer.tsx  document-card.tsx  documents-list.tsx  index.ts
apps/frontend/src/components/layout/: header.tsx  sidebar.tsx
apps/frontend/src/components/transform/: file-preview.tsx  file-sidebar.tsx  result-panel.tsx  text-result-panel.tsx
apps/frontend/src/components/upload/: dropzone.tsx  index.ts  upload-options.tsx
apps/frontend/src/config/: api.ts
apps/frontend/src/contexts/: auth-context.tsx
apps/frontend/src/hooks/: use-api-keys.ts  use-documents.ts
apps/frontend/src/lib/: api.ts  format.ts
apps/frontend/src/types/: auth.ts  index.ts
apps/worker/: railway.json
apps/worker/tasks/: __init__.py  convert_task.py
infra/alembic/: env.py
infra/alembic/versions/: 20251204_0001_initial_schema.py  20251211_0002_add_api_keys_table.py  20251213_0003_add_auth_tables.py  20251213_2049_add_is_deleted_to_users.py  20251214_0001_add_api_keys_table.py
