[project]
name = "fileforge"
version = "0.1.0"
description = "Convert any file into LLM-ready JSON data with chunking support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sheraz", email = "sheraz@example.com" }
]
keywords = ["llm", "file-converter", "chunking", "document-processing", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    # Async tasks
    "celery>=5.4.0",
    "redis>=5.2.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # HTTP clients
    "httpx>=0.28.0",
    # Document parsing - Local lightweight stack (no external APIs)
    "pymupdf>=1.24.0",           # PDF extraction (fast, local)
    "pdfplumber>=0.11.0",        # PDF table extraction
    "python-docx>=1.1.0",        # DOCX extraction
    "openpyxl>=3.1.0",           # Excel extraction
    "pandas>=2.2.0",             # CSV/data handling
    "pillow>=10.0.0",            # Image handling
    "pytesseract>=0.3.10",       # OCR (requires Tesseract installed)
    # Legacy parsing (optional, for backward compatibility)
    "unstructured[all-docs]>=0.16.0",
    # Chunking & Tokenization
    "tiktoken>=0.8.0",           # Token counting (OpenAI tokenizer)
    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",  # File uploads
    "python-magic>=0.4.27",      # File type detection
    "aiofiles>=24.1.0",          # Async file operations
    # Docling with OCR (EasyOCR) - CPU-optimized build
    # OCR extras: easyocr, tesserocr, rapidocr, ocrmac
    # NOTE: VLM support removed to avoid GPU/CUDA dependencies
    # VLM can be re-enabled with docling[vlm] if GPU is available
    "docling[easyocr]>=2.64.0",  # Docling with EasyOCR (CPU-only)
    # Additional format support
    "ebooklib>=0.18",            # EPUB ebook parsing
    "msg-parser>=1.2.0",         # Outlook MSG email files
    "dbfread>=2.0.7",            # dBase DBF database files
    "pypandoc>=1.14",            # RST, ORG markup conversion (requires pandoc)
    "pillow-heif>=0.18.0",       # HEIC/HEIF image support
    "beautifulsoup4>=4.12.0",    # HTML parsing for email/epub
    "lxml>=5.0.0",               # XML/HTML parsing backend
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    # Linting and formatting
    "ruff>=0.8.0",
    # Type checking
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    # Development tools
    "ipython>=8.31.0",
    "ipdb>=0.13.13",
    "watchdog>=6.0.0",
    # Process management
    "honcho>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=packages --cov=apps --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["packages", "apps"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


# PyTorch CPU-only configuration
# This ensures torch is installed from the CPU-only index (no CUDA/nvidia deps)
# See: https://docs.astral.sh/uv/guides/integration/pytorch/

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Force torch and related libs to use the CPU-only index
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]